--- a/index.html
+++ b/index.html
@@ -86,6 +86,45 @@
   </div>
   <!--section-->
 
+  <!--col-->
+<div class="border-bottom-dark">
+  <section class="flex-column container mb-3">
+    <div>
+      <h4 class="d-flex justify-content-center my-3"> <b>The Most Preferred Bungalows This Season</b> </h4>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner rounded mt-3 ">
+        <div class="carousel-item active">
+          <img src="css/images/bb.jpg" class="d-block w-100 filter" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="css/images/b.jpg" class="d-block w-100 filter" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="css/images/bbb.jpg" class="d-block w-100 filter" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="css/images/bung.webp" class="d-block w-100 filter" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+  </div>
+  <!--col-->
+
   <!--card-->
 
   <div class="card-container my-4 border-bottom-dark ">
@@ -150,44 +189,7 @@
 </div>
 <!--card-->
 
-<!--col-->
-<div class="border-bottom-dark">
-<section class="flex-column container mb-3">
-  <div>
-    <h4 class="d-flex justify-content-center"> <b>The Most Preferred Bungalows This Season</b> </h4>
-  </div>
-  <div id="carouselExampleIndicators" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner rounded mt-3 ">
-      <div class="carousel-item active">
-        <img src="css/images/bb.jpg" class="d-block w-100 filter" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="css/images/b.jpg" class="d-block w-100 filter" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="css/images/bbb.jpg" class="d-block w-100 filter" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="css/images/bung.webp" class="d-block w-100 filter" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</section>
-</div>
-<!--col-->
+
 
 <!--footer-->
 
